--- a/03_kernel_regression.ipynb
+++ b/03_kernel_regression.ipynb
@@ -101,6 +101,15 @@
     "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This can be also done with Gpytorch"
+   ]
   }
  ],
  "metadata": {
